feat: add delete class and fix double week display

--- a/englishangel/index.html
+++ b/englishangel/index.html
@@ -18,6 +18,7 @@
                 <div class="control-group">
                     <select id="classSelect"></select>
                     <button id="newClassButton">New Class</button>
+                    <button id="deleteClassButton" style="background-color: #dc3545;">Delete Class</button>
                 </div>
                 <div class="control-group" id="newClassInputGroup" style="display:none;">
                     <input type="text" id="newClassName" placeholder="Enter class name">
